# claimcheck

./: .claimcheck.toml  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
claimcheck/: __init__.py  claims.py  cli.py  config.py  discover.py  gitinfo.py  markdown.py  report.py  stamp.py  verify.py
docs/: ARCHITECTURE.md  DECISIONS.md  RESEARCH.md  ROADMAP.md
tests/: test_claims.py  test_cli.py  test_evidence.py  test_imports.py  test_markdown.py  test_v02.py  test_v04.py  test_verify.py
