[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claimcheck"
version = "0.4.0"
description = "A linter that keeps agent-facing docs true: verifies paths, links, anchors, symbols, and commit citations in markdown against the actual codebase."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["documentation", "linter", "agents", "markdown", "drift", "CLAUDE.md", "AGENTS.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
claimcheck = "claimcheck.cli:main"

[tool.setuptools]
packages = ["claimcheck"]
